<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scr_consume_add"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/appbg"
    android:scrollbars="none" >

    <LinearLayout
        android:id="@+id/topic_main_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical" >

        <include layout="@layout/actionbar_usual" />

        <EditText
            android:id="@+id/et_consume_add_desc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15.0dip"
            android:layout_marginRight="15.0dip"
            android:layout_marginTop="15.0dip"
            android:background="@drawable/edittext_bg_shape"
            android:gravity="top"
            android:hint="@string/consume_add_desc"
            android:padding="14.0dip"
            android:textColor="@color/text_balck"
            android:textColorHint="#ffcbcbcb"
            android:textSize="16.0sp" />

        <EditText
            android:id="@+id/et_consume_add_je"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15.0dip"
            android:layout_marginRight="15.0dip"
            android:layout_marginTop="15.0dip"
            android:background="@drawable/edittext_bg_shape"
            android:gravity="top"
            android:hint="@string/je_with_hint"
            android:inputType="numberDecimal"
            android:padding="14.0dip"
            android:textColor="@color/text_balck"
            android:textColorHint="#ffcbcbcb"
            android:textSize="16.0sp" />

        <EditText
            android:id="@+id/et_consume_add_detail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15.0dip"
            android:layout_marginRight="15.0dip"
            android:layout_marginTop="15.0dip"
            android:background="@drawable/edittext_bg_shape"
            android:gravity="top"
            android:hint="@string/consume_add_detail"
            android:inputType="textMultiLine"
            android:minHeight="160.0dip"
            android:padding="14.0dip"
            android:textColor="@color/text_balck"
            android:textColorHint="#ffcbcbcb"
            android:textSize="16.0sp" />

        <RelativeLayout
            android:id="@+id/rl_consume_add_budget"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_list_item_bg"
            android:clickable="true" >

            <TextView
                android:id="@+id/tv_consume_add_budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/budget"

                android:textColor="#353535"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_consume_add_budget_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:ellipsize="end"
                android:gravity="right"
                android:singleLine="true"
                android:text="@string/consume_add_budget"
                android:textColor="#AAAAAA"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="#dadada" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_consume_add_assert"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/btn_list_item_bg"
            android:clickable="true" >

            <TextView
                android:id="@+id/tv_consume_add_assert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/cassert"
                android:textColor="#353535"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_consume_add_assert_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:ellipsize="end"
                android:gravity="right"
                android:singleLine="true"
                android:text="@string/consume_add_cassert"
                android:textColor="#AAAAAA"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="#dadada" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_consume_add_ctype"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/btn_list_item_bg"
            android:clickable="true" >

            <TextView
                android:id="@+id/tv_consume_add_ctype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/ctype"
                android:textColor="#353535"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_consume_add_ctype_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:ellipsize="end"
                android:gravity="right"
                android:singleLine="true"
                android:text="@string/consume_add_ctype"

                android:textColor="#AAAAAA"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>