<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_consume"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/appbg"
    android:orientation="vertical">

    <include layout="@layout/actionbar_back_search" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent">

        <!-- 子菜单选项 -->

        <LinearLayout
            android:id="@+id/layout_bar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/transparent">

                <TextView
                    android:id="@+id/tv_consume_section_budget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/text_white"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/budget"
                    android:textColor="@color/main_textcolor_normal"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/iv_consume_mark_budget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/tv_consume_section_budget"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/baijia_section_bg_normal" />
            </RelativeLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/border_gray" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_consume_section_assert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/text_white"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/cassert"
                    android:textColor="@color/main_textcolor_normal"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/iv_consume_mart_assert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/tv_consume_section_assert"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/baijia_section_bg_normal" />
            </RelativeLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/border_gray" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_consume_section_consume_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/text_white"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/ctype"
                    android:textColor="@color/main_textcolor_normal"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/iv_consume_mark_consume_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/tv_consume_section_consume_type"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/baijia_section_bg_normal" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.4dp"
        android:background="@color/border_gray" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/text_white"
        android:gravity="center_vertical">

        <song.song121321.xlistview.XListView
            android:id="@+id/xl_consume_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:divider="@color/text_white"></song.song121321.xlistview.XListView>
    </RelativeLayout>

</LinearLayout>